--- a/frontend/src/html/user/point_mgmt.html
+++ b/frontend/src/html/user/point_mgmt.html
@@ -77,8 +77,7 @@
                     <option value="weekly">ランキング/週間</option>
                 </select>
                 <!-- ランキングコンテナ -->
-                    <!-- コンテナサイズを固定したくてstyleを直接書いたけどよくなかったら消してもらえたら　　-->
-                    <div id="ranking" class="w-4/5 mt-10 mr-auto ml-auto overflow-y-scroll" style="height: 900px;">
+                    <div id="ranking" class="w-4/5 mt-10 mr-auto ml-auto overflow-y-scroll">
                         <!-- ランキングの表示-->
                     </div>
             </div>
