--- a/frontend/src/html/user/point_mgmt.html
+++ b/frontend/src/html/user/point_mgmt.html
@@ -77,7 +77,7 @@
                     <option value="weekly">ランキング/週間</option>
                 </select>
                 <!-- ランキングコンテナ -->
-                    <div id="ranking" class="w-4/5 mt-10 mr-auto ml-auto overflow-y-scroll">
+                    <div id="ranking" class="w-4/5 h-[50dvh] mt-10 mr-auto ml-auto overflow-y-scroll">
                         <!-- ランキングの表示-->
                     </div>
             </div>
