jsのパスを結合からコピー

--- a/frontend/src/html/user/tasks/task_list.html
+++ b/frontend/src/html/user/tasks/task_list.html
@@ -206,5 +206,14 @@
                 moreTaskContainer.appendChild(taskDiv);
             });
         </script>
+            <!-- 追記しました　-->
+            <script src="/statics/app/appjs/loader.js"></script>
+            <script src="/statics/app/appjs/authsdk.js"></script>
+            <script src="/statics/app/appjs/appsdk.js"></script>
+            <script src="/statics/app/appjs/member.js"></script>
+            <script src="/statics/app/appjs/Tasks.js"></script>
+            <!--script要素 -->
+            <script src="./scripts/task_list.js"></script>
+            <link rel="stylesheet" href="/statics/app/css/setall.css">
     </body>
 </html>
