--- a/frontend/src/html/setting_user/group_name.html
+++ b/frontend/src/html/setting_user/group_name.html
@@ -6,11 +6,6 @@
     <title>グループ作成画面</title>
     <link rel="stylesheet" href="/frontend/src/css/setting_user/group_name.css">
     <style>
-        body {
-            background-color: rgba(246, 219, 186, 0.5);
-            overflow: hidden;
-        }
-
         /* グループ名作成時のアニメーション */
 
         .cp_input_text {
@@ -77,13 +72,13 @@
     </style>
 </head>
 
-<body class="h-screen ">
+<body class="bg-main-color font-coment h-[100dvh]">
 
     <!-- main -->
     <main class="h-full w-full">
         <a href="#"><img class="ml-10 mt-7 w-9 h-12" src="/frontend/images/back.png" alt="戻る"></a>
         <!-- グループ名の作成 -->
-        <p class="text-6xl mt-48 mb-24 text-center text-orange-500">グループ名を入力してください</p>
+        <p class="text-6xl mt-48 mb-24 text-center text-main-font-color">グループ名を入力してください</p>
         <!-- 入力 -->
         <div class="cp_input_text">
             <input class="ef text-4xl" type="text" placeholder="">
@@ -92,13 +87,15 @@
         </div>
 
         <!-- メンバー -->
-        <p class="text-6xl mt-10 mb-24 text-center text-orange-500">グループメンバーを追加してください</p>
-        <div class="grid mr-auto ml-auto mt-11 bg-amber-100 w-4/5 h-1/2">
+        <p class="text-6xl mt-10 mb-24 text-center text-main-font-color">グループメンバーを追加してください</p>
+        <div class="grid mr-auto ml-auto mt-11 bg-sub-color w-4/5 h-1/2 rounded-3xl border-4 border-white">
             <input class="mr-auto ml-auto mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
             <button class="mr-auto ml-auto mt-4"><img src="/frontend/images/add.png" alt="追加ボタン"></button>
         </div>
-        <button class="block mr-auto ml-auto mt-24 text-6xl bg-orange-300 font-light px-12 py-6 rounded-2xl">作成</button>
+        <button class="block mr-auto ml-auto mt-24 text-6xl bg-[#BCE6FF] font-light px-12 py-6 rounded-2xl">作成</button>
     </main>
+    
 </body>
+
 
 </html>
