ボタンのスタイル調整

--- a/frontend/src/html/setting_user/group_name.html
+++ b/frontend/src/html/setting_user/group_name.html
@@ -28,7 +28,7 @@
             <input class="mr-auto ml-auto mt-24 text-3xl font-light w-4/5 h-24 rounded-3xl" type="text">
             <button class="mr-auto ml-auto mt-4"><img src="/frontend/images/add.png" alt="追加ボタン"></button>
         </div>
-        <button class="block mr-auto ml-auto mt-24 text-6xl bg-[#BCE6FF] font-light px-12 py-6 rounded-2xl">作成</button>
+        <button class="block mr-auto ml-auto mt-24 text-6xl bg-[#BCE6FF] font-light px-24 py-6 shadow-2xl border-0 rounded-3xl">作成</button>
     </main>
     <script src="/statics/app/appjs/authsdk.js"></script>
     <script src="/statics/app/appjs/appsdk.js"></script>
