--- a/frontend/src/html/setting_user/menber_check.html
+++ b/frontend/src/html/setting_user/menber_check.html
@@ -41,6 +41,11 @@
         </div>
         <button class="block mx-auto mt-36 text-6xl bg-[#BCE6FF] font-light px-12 py-6 w-4/12 h-[125px] shadow-2xl border-0 rounded-[50px]">確定</button>
     </main>
+    <script src="/statics/app/appjs/authsdk.js"></script>
+    <script src="/statics/app/appjs/appsdk.js"></script>
+    <script src="./scripts/menber_check.js"></script>
+    <link rel="stylesheet" href="/statics/app/css/setall.css">
+    <!-- 追記しました　 -->
     <link rel="stylesheet" href="/frontend/src/css/setall.css" />
 </body>
 
